# fa-content

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GOVERNANCE.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  feature_request.yml
.github/workflows/: asan.yml  ci.yml  codeql.yml  coverage.yml  dco.yml  labeler.yml  release.yml
bridge/: CMakeLists.txt
bridge/src/: FaBridgeVersion.h.in  FaContentPack.cpp  FaContentPack.h  FaInstallLocator.cpp  PluginExport.h  plugin_entry.cpp
docs/: README.md  architecture.md  asset-support-matrix.md  development.md  roadmap.md
packaging/: manifest.toml.in
scripts/: draft-changelog.py  release.py
tests/: CMakeLists.txt  TestEnv.h  test_fa_content_pack.cpp  test_fx_lib_link.cpp  test_plugin_load.cpp  test_real_install.cpp
